--- a/WebMarkReport/appsettings.json
+++ b/WebMarkReport/appsettings.json
@@ -1,8 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+  "Data": {
+    "WebMarkReportMarkReport": {
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=WebMarkReport;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
