Корректировка отображения таблиц

--- a/WebMarkReport/WebMarkReport.csproj
+++ b/WebMarkReport/WebMarkReport.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\bak\**" />
+    <Content Remove="Models\bak\**" />
+    <EmbeddedResource Remove="Models\bak\**" />
+    <None Remove="Models\bak\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
